<resources>
    <string name="app_name">スケジュールアプリ</string>
    <string name="title_activity_add">スケジュールの新規作成</string>
    <string name="title_activity_detail">スケジュールの変更</string>
    <string name="action_settings">Settings</string>

    <string name="bt_make_text">作成</string>
    <string name="bt_save_text">保存</string>
    <string name="bt_update_text">更新</string>
    <string name="bt_delete_text">削除</string>
    <string name="text_date">日付</string>
    <string name="text_desc">内容</string>
    <string name="text_time">時間</string>
    <string name="toast_add">新規スケジュールを登録しました</string>
    <string name="toast_update">スケジュールを更新しました</string>
    <string name="toast_delete">スケジュールを削除しました</string>
    <string name="delete_dialog_message">スケジュールを削除しますがよろしいですか？</string>
    <string name="notification_channel_name">スケジュールアプリ通知</string>
    <string name="validation_error">時間を入力してください</string>


</resources>